# kaldi

./: .gitignore  CMakeLists.txt
